# cppp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  run.sh
cmake/: EnableCxxImportStd.cmake
docs/: CLAUDE.md
modern/11/variadic_templates/: maximum.cpp  recursive_print.cpp
modern/17/optional/: data.txt  optional.cpp
src/: main.cpp  math.cpp  math.cppm
src/modern/11/bind/: bind.cpp
src/modern/11/function/: function.cpp  function_and_function-ptr.cpp  function_functor.cpp
src/modern/11/ref_and_cref/: ref_and_cref.cpp
src/modern/11/variadic_templates/: max.cpp  printf.cpp
src/modern/17/filesystem/: filesystem.cpp
src/modern/20/: find_if.cpp  format.cpp  span.cpp
src/modern/23/: println.cpp
src/primer/OOP/: virtual.cpp
src/primer/RAII/: raii.cpp
src/primer/hash/: uuid.cpp  uuid.h
src/primer/reference/: another_wrong_case.cpp  reference.cpp
src/stl/: unordered_map.cpp
test/primer/hash/: uuid_test.cpp
test/stl/: unordered_map_test.cpp
